--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/radioGroup1"
         android:layout_marginTop="24dp"
-        android:onClick="onClick"
         android:text="@string/search" />
+           <!--android:onClick="onClick1"-->
+    
 
     <AutoCompleteTextView
         android:id="@+id/editText1"
