--- a/res/layout/list_bhajans.xml
+++ b/res/layout/list_bhajans.xml
@@ -27,10 +27,20 @@
     <Button
         android:id="@+id/btn_play"
         android:layout_width="90dp"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content"        
+        android:onClick="onClick2"
         android:text="play" />
+        
+         <Button
+        android:id="@+id/btn_fav"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:text="Favorite" />
+        
 
 </LinearLayout> 
+
+
 
  <!--fragment
         android:id="@+id/player_fragment"
