--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:id="@android:id/list"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:padding="10dp"
-    android:textSize="20sp" >
+    android:textSize="16sp" >
 </TextView>
