--- a/res/layout/expandlist_child_item.xml
+++ b/res/layout/expandlist_child_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/Black"
+        android:typeface="serif"
         android:textSize="12sp" />
 
 </LinearLayout>
