--- a/res/layout/expandlist_group_item.xml
+++ b/res/layout/expandlist_group_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
-        android:textColor="@color/Black"
+        android:textColor="#FFFFFF"
+        android:typeface="serif"
         android:textSize="16sp" />
 
 </LinearLayout>
