--- a/res/drawable-mdpi/progress.xml
+++ b/res/drawable-mdpi/progress.xml
@@ -18,7 +18,7 @@
             android:centerColor="#A9F5E1"
             android:centerY="0.50"
             android:endColor="#A9F5D0"
-            android:startColor="#A9F5BC"
+            android:startColor="#FBF8EF"
             android:type="sweep"
             android:useLevel="false" />
     </shape>
