--- a/res/layout/bhajan_details.xml
+++ b/res/layout/bhajan_details.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFFF">
+    android:background="#CEFAC6">
         
      <ListView
         android:id="@+android:id/list"
