--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -5,11 +5,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#CEFAC6">
-        
-     <ListView
+
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/back_to_search_page" />
+      
+    <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="300dp" />   
-       
+        android:layout_height="fill_parent" />   
+
+    
 </LinearLayout>
 
