--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#CEFAC6">
-      
-    <ListView
-        android:id="@android:id/list"
+   
+     <com.google.android.gms.ads.AdView android:id="@+id/adView"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="ca-app-pub-4360034453907355/2264488829"
+                         ads:adSize="BANNER"                         
+                         />
+     
+    <TextView
+        android:id="@+id/text1"
+        android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
-        android:layout_height="400dp" />   
-
+        android:layout_height="40dp"     
+        android:layout_below="@+id/adView"   
+    />
+    
     <Button
         android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/text1"
         android:text="@string/back_to_search_page" />
+    <ListView
+        android:id="@android:id/list"
+        android:layout_below="@+id/btn_search"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />   
+        
+
+ 
     
-</LinearLayout>
+</RelativeLayout>
 
