--- a/res/layout/fav_tab.xml
+++ b/res/layout/fav_tab.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#CEFAC6">
+    
+     <com.google.android.gms.ads.AdView android:id="@+id/adView"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         ads:adUnitId="ca-app-pub-4360034453907355/3741222024"
+                         ads:adSize="BANNER"                         
+                         />
+     
+    <TextView
+        android:id="@+id/text1"
+        android:text="@string/click_on_fav"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"     
+        android:layout_below="@+id/adView"   
+    />
+    
     <ListView
         android:id="@android:id/list"
+        android:layout_below="@+id/text1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />   
-</LinearLayout>
+        
+       
+</RelativeLayout>
