--- a/res/layout/fav_tab.xml
+++ b/res/layout/fav_tab.xml
@@ -7,24 +7,34 @@
     android:layout_height="fill_parent"
     android:background="#CEFAC6">
     
+     <TextView
+        android:id="@+id/text1"
+        android:text="@string/fav_desc"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"     
+    />
+     
      <com.google.android.gms.ads.AdView android:id="@+id/adView"
+                         android:layout_below="@+id/text1"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          ads:adUnitId="ca-app-pub-4360034453907355/3741222024"
                          ads:adSize="BANNER"                         
                          />
      
-    <TextView
-        android:id="@+id/text1"
+      <TextView
+        android:id="@+id/text2"
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
         android:layout_height="40dp"     
         android:layout_below="@+id/adView"   
     />
+     
+   
     
     <ListView
         android:id="@android:id/list"
-        android:layout_below="@+id/text1"
+        android:layout_below="@+id/text2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />   
         
