--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -14,20 +14,20 @@
         android:layout_height="60dp"     
     />
     
-    <com.google.android.gms.ads.AdView android:id="@+id/adView"
+    <!--com.google.android.gms.ads.AdView android:id="@+id/adView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_below="@+id/text2"
                          ads:adUnitId="ca-app-pub-4360034453907355/2264488829"
                          ads:adSize="BANNER"                         
-                         />
+                         /-->
      
     <TextView
         android:id="@+id/text1"
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
         android:layout_height="40dp"     
-        android:layout_below="@+id/adView"   
+        android:layout_below="@+id/text2"   
     />
     
     <Button
