--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -11,7 +11,8 @@
         android:id="@+id/text2"
         android:text="@string/list_desc"
         android:layout_width="fill_parent"
-        android:layout_height="60dp"     
+        android:layout_height="wrap_content"
+        android:textSize="18sp"     
     />
     
     <com.google.android.gms.ads.AdView android:id="@+id/adView"
@@ -26,8 +27,9 @@
         android:id="@+id/text1"
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
-        android:layout_height="40dp"     
+        android:layout_height="wrap_content"     
         android:layout_below="@+id/adView"   
+        android:textSize="18sp"     
     />
     
     <Button
