--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -12,40 +12,39 @@
         android:text="@string/list_desc"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"     
+        android:textSize="15sp"     
     />
     
     <com.google.android.gms.ads.AdView android:id="@+id/adView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
-                         android:layout_below="@+id/text2"
+                         android:layout_below="@+id/text1"
+                         android:layout_alignParentBottom="true"
                          ads:adUnitId="ca-app-pub-6367763273676349/9142603115"
                          ads:adSize="BANNER"                         
                          />
      
     <TextView
         android:id="@+id/text1"
-        android:text="@string/click_on_fav"
+        android:text="@string/click_on_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"     
-        android:layout_below="@+id/adView"   
-        android:textSize="18sp"     
+        android:layout_below="@android:id/list"   
+        android:textSize="15sp"     
     />
     
     <Button
         android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text1"
+        android:layout_below="@+id/text2"
         android:text="@string/back_to_search_page" />
     <ListView
         android:id="@android:id/list"
         android:layout_below="@+id/btn_search"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />   
+        android:background="#81F781"
+        android:layout_height="125dp" />   
         
-
- 
-    
 </RelativeLayout>
 
