--- a/res/layout/fav_tab.xml
+++ b/res/layout/fav_tab.xml
@@ -12,14 +12,15 @@
         android:text="@string/fav_desc"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"   
-        android:textSize="18sp"  
+        android:textSize="15sp"  
     />
      
      <com.google.android.gms.ads.AdView android:id="@+id/adView"
-                         android:layout_below="@+id/text1"
+                         android:layout_below="@+id/text2"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          ads:adUnitId="ca-app-pub-6367763273676349/1619336315"
+                         android:layout_alignParentBottom="true"
                          ads:adSize="BANNER"                         
                          />
      
@@ -28,18 +29,18 @@
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"     
-        android:layout_below="@+id/adView"   
-        android:textSize="18sp"
+        android:layout_below="@android:id/list"   
+        android:textSize="15sp"
     />
      
-   
-    
+  
     <ListView
         android:layout_marginTop="20dp"
         android:id="@android:id/list"
-        android:layout_below="@+id/text2"
+        android:layout_below="@+id/text1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />   
+        android:background="#81F781"
+        android:layout_height="150dp" />   
         
        
 </RelativeLayout>
