--- a/res/layout/bhajan_list.xml
+++ b/res/layout/bhajan_list.xml
@@ -15,21 +15,21 @@
         android:textSize="15sp"     
     />
     
-    <com.google.android.gms.ads.AdView android:id="@+id/adView"
+    <!--com.google.android.gms.ads.AdView android:id="@+id/adView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_below="@+id/text1"
                          android:layout_alignParentBottom="true"
                          ads:adUnitId="ca-app-pub-6367763273676349/9142603115"
                          ads:adSize="BANNER"                         
-                         />
+                         /-->
      
     <TextView
         android:id="@+id/text1"
         android:text="@string/click_on_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"     
-        android:layout_below="@android:id/list"   
+        android:layout_below="@android:id/text2"   
         android:textSize="15sp"     
     />
     
@@ -37,14 +37,13 @@
         android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text2"
+        android:layout_below="@+id/text1"
         android:text="@string/back_to_search_page" />
     <ListView
         android:id="@android:id/list"
         android:layout_below="@+id/btn_search"
         android:layout_width="fill_parent"
         android:background="#81F781"
-        android:layout_height="125dp" />   
+        android:layout_height="fill_parent" />   
         
 </RelativeLayout>
-
