--- a/res/layout/fav_tab.xml
+++ b/res/layout/fav_tab.xml
@@ -15,21 +15,21 @@
         android:textSize="15sp"  
     />
      
-     <com.google.android.gms.ads.AdView android:id="@+id/adView"
+     <!--com.google.android.gms.ads.AdView android:id="@+id/adView"
                          android:layout_below="@+id/text2"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          ads:adUnitId="ca-app-pub-6367763273676349/1619336315"
                          android:layout_alignParentBottom="true"
                          ads:adSize="BANNER"                         
-                         />
+                         /-->
      
       <TextView
         android:id="@+id/text2"
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"     
-        android:layout_below="@android:id/list"   
+        android:layout_below="@android:id/text1"
         android:textSize="15sp"
     />
      
@@ -37,10 +37,10 @@
     <ListView
         android:layout_marginTop="20dp"
         android:id="@android:id/list"
-        android:layout_below="@+id/text1"
+        android:layout_below="@+id/text2"
         android:layout_width="fill_parent"
         android:background="#81F781"
-        android:layout_height="150dp" />   
+        android:layout_height="fill_parent" />   
         
        
 </RelativeLayout>
