Removing Admob and formatting changes

--- a/res/layout/fav_tab.xml
+++ b/res/layout/fav_tab.xml
@@ -29,7 +29,7 @@
         android:text="@string/click_on_fav"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"     
-        android:layout_below="@android:id/text1"
+        android:layout_below="@+id/text1"
         android:textSize="15sp"
     />
      
